--- a/force-app/main/default/aura/HomePageParticipant/HomePageParticipant.cmp
+++ b/force-app/main/default/aura/HomePageParticipant/HomePageParticipant.cmp
@@ -19,7 +19,7 @@
                 <c:RRNPathItem label="{!$Label.c.Navigation_Home}"/>
             </c:RRNavigationPath>
         </div>
-        <div class="hp-welcome-msg">{!v.participantState.participantName}</div>
+        <div class="hp-welcome-msg">{!v.participantState.welcomeMessage}</div>
 
         <aura:if isTrue="{!!empty(v.participantState.pe)}">
             <div class="slds-grid slds-gutters slds-wrap">
