--- a/force-app/main/default/layouts/Resource__c-Study Document.layout-meta.xml
+++ b/force-app/main/default/layouts/Resource__c-Study Document.layout-meta.xml
@@ -30,7 +30,7 @@
                 <field>Video__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Version_Date__c</field>
             </layoutItems>
         </layoutColumns>
