--- a/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
+++ b/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
@@ -33,7 +33,7 @@
         </aura:if>
         <aura:if isTrue="{!!empty(v.pe)}">
             <c:ParticipantCardHeader userMode="{!v.userMode}" pe="{!v.pe}"/>
-`           <c:ParticipantCardFields userMode="{!v.userMode}" pe="{!v.pe}"/>
+            <c:ParticipantCardFields userMode="{!v.userMode}" pe="{!v.pe}"/>
 
             <aura:if isTrue="{!v.showPath}">
                 <div class="vpi-path-panel">
