--- a/force-app/main/default/aura/ManualTask/ManualTask.cmp
+++ b/force-app/main/default/aura/ManualTask/ManualTask.cmp
@@ -13,7 +13,6 @@
     <aura:attribute name="visibility" type="List"/>
     <aura:attribute name="showNumbersAdd" type="String" default="false"/>
     <aura:attribute name="dayRemind" type="Integer"/>
-    <aura:attribute name="tomorrowDate" type="Date"/>
     <aura:attribute name="todayDate" type="Date"/>
     <aura:attribute name="patientStatuses" type="List"
                     default="[
@@ -64,7 +63,7 @@
                     </span>
                     <aura:set attribute="else">
                         <lightning:input aura:id="field" type="date" label="Reminder Date" value="{!v.task.Reminder_Date__c}"
-                                         onchange="{!c.onDaysChange}" min="{!v.tomorrowDate}" max="{!v.task.ActivityDate}"/>
+                                         onchange="{!c.onDaysChange}" min="{!v.todayDate}" max="{!v.task.ActivityDate}"/>
                     </aura:set>
                 </aura:if>
             </div>
